--- a/oslabsim/src/main/resources/static/index.html
+++ b/oslabsim/src/main/resources/static/index.html
@@ -120,6 +120,7 @@ function runProcess() {
   let result = 'Gantt Chart:\n' + gantt.join(' ') + ' |\n\n';
   result += `PID    AT  BT  Prio  CT  TAT  WT\n`;
   let totalTAT = 0, totalWT = 0;
+  done.sort((a, b) => a.id.localeCompare(b.id)); // Sort by PID for consistent output order
   done.forEach(p => {
     let tat = p.done - p.a;
     let wt = tat - p.b;
@@ -138,40 +139,107 @@ function runDisk() {
   let cur = head, seq = [], total = 0;
   if (algo==='FCFS') q.forEach(x => { seq.push(x); total+=Math.abs(cur-x); cur=x; });
   else {
+    let requests = [...q]; // Keep original requests for some algos if needed, use q for processing
     q.sort((a,b)=>a-b);
     let left = q.filter(x=>x<cur), right = q.filter(x=>x>=cur);
-    if (algo==='SSTF') while(q.length) { q.sort((a,b)=>Math.abs(a-cur)-Math.abs(b-cur)); let n=q.shift(); seq.push(n); total+=Math.abs(n-cur); cur=n; }
-    else if (algo==='SCAN') { right.forEach(x=>{seq.push(x); total+=Math.abs(x-cur); cur=x;}); total+=Math.abs(max-cur); cur=max; left.reverse().forEach(x=>{seq.push(x); total+=Math.abs(x-cur); cur=x;}); }
-    else if (algo==='C-SCAN') { right.forEach(x=>{seq.push(x); total+=Math.abs(x-cur); cur=x;}); total+=Math.abs(max-cur)+max; cur=0; left.forEach(x=>{seq.push(x); total+=Math.abs(x-cur); cur=x;}); }
+    if (algo==='SSTF') {
+        let sstf_q = [...requests]; // Use a copy for SSTF manipulation
+        while(sstf_q.length) {
+            sstf_q.sort((a,b)=>Math.abs(a-cur)-Math.abs(b-cur));
+            let n=sstf_q.shift(); seq.push(n); total+=Math.abs(n-cur); cur=n;
+        }
+    }
+    else if (algo==='SCAN') { right.forEach(x=>{seq.push(x); total+=Math.abs(x-cur); cur=x;}); if (cur !== max) {total+=Math.abs(max-cur); cur=max;} left.reverse().forEach(x=>{seq.push(x); total+=Math.abs(x-cur); cur=x;}); }
+    else if (algo==='C-SCAN') { right.forEach(x=>{seq.push(x); total+=Math.abs(x-cur); cur=x;}); if (q.length > 0 && cur !== max) { total+=Math.abs(max-cur); cur=max; if (left.length > 0) {total += max; cur=0;} } left.forEach(x=>{seq.push(x); total+=Math.abs(x-cur); cur=x;}); }
     else if (algo==='LOOK') { right.forEach(x=>{seq.push(x); total+=Math.abs(x-cur); cur=x;}); left.reverse().forEach(x=>{seq.push(x); total+=Math.abs(x-cur); cur=x;}); }
-    else if (algo==='C-LOOK') { right.forEach(x=>{seq.push(x); total+=Math.abs(x-cur); cur=x;}); if (left.length) { cur=left[0]; total+=Math.abs(seq[seq.length-1]-cur); seq.push(...left); for (let i=1;i<left.length;i++) total+=Math.abs(left[i]-left[i-1]); } }
+    else if (algo==='C-LOOK') { right.forEach(x=>{seq.push(x); total+=Math.abs(x-cur); cur=x;}); if (left.length) { left.forEach(x=>{seq.push(x); total+=Math.abs(x-cur); cur=x;});}} // Simplified C-LOOK, assumes direct jump if needed
+    // Correction for C-LOOK jump: Original logic was flawed. Let's refine.
+    else if (algo==='C-LOOK') {
+      let current = cur;
+      right.forEach(x=>{ seq.push(x); total += Math.abs(x - current); current = x; });
+      if (left.length > 0) {
+        // No head movement cost for the "jump" in LOOK variations
+        left.forEach(x=>{ seq.push(x); total += Math.abs(x - current); current = x; });
+      }
+    }
   }
-  document.getElementById('disk-output').textContent = `Seek: ${[head,...seq].join(' -> ')}\nTotal Movement: ${total}`;
+  document.getElementById('disk-output').textContent = `Seek Sequence: ${[head,...seq].join(' -> ')}\nTotal Head Movement: ${total}`;
 }
+
+// --- Corrected runPage function ---
 function runPage() {
   const algo = document.getElementById('page-algo').value;
   const cap = +document.getElementById('frame-capacity').value;
   const ref = parseLines(document.getElementById('page-input').value).map(Number);
-  let set = new Set(), q=[], hits=0, faults=0, out=[];
-  ref.forEach((x,i)=>{
-    let step = `Ref: ${x} Frame: `;
-    if (set.has(x)) { hits++; step+=q; }
-    else {
-      faults++;
-      if (set.size<cap) { set.add(x); q.push(x); }
-      else {
-        let victim = algo==='LRU' ? q.shift() : (algo==='Optimal'? (()=>{
-          let future = ref.slice(i+1), index = q.map(pg => future.indexOf(pg));
-          let idx = index.indexOf(-1); return idx!==-1?q[idx]:q[index.indexOf(Math.max(...index))];
-        })() : q.shift());
-        set.delete(victim); set.add(x); q.splice(q.indexOf(victim),1); q.push(x);
+  // Use an array `q` to track pages in frames, ordered by usage for LRU/FIFO.
+  // Use a Set `set` for fast checking if a page is in frames.
+  let q = [], set = new Set(), hits = 0, faults = 0, out = [];
+
+  ref.forEach((x, i) => {
+    let stepDetails = `Ref: ${x} | Frames: `;
+    let faultOccurred = false;
+
+    if (set.has(x)) { // --- Page Hit ---
+      hits++;
+      stepDetails += `[${q.join(',')}] -> Hit | `;
+      // *** LRU Fix: On hit, move the accessed page to the end (most recently used) ***
+      if (algo === 'LRU') {
+        q.splice(q.indexOf(x), 1); // Remove from current position
+        q.push(x); // Add to end
       }
-      step+=q;
+      // For FIFO/Optimal, frame order doesn't change on hit.
+    } else { // --- Page Fault ---
+      faults++;
+      faultOccurred = true;
+      stepDetails += `[${q.join(',')}] -> Fault | `;
+
+      if (q.length < cap) { // Frames are not full
+        set.add(x);
+        q.push(x); // Add new page to the end
+        stepDetails += `Add ${x}`;
+      } else { // Frames are full, need replacement
+        let victim;
+        if (algo === 'FIFO') {
+          victim = q.shift(); // Remove page from the front (oldest)
+        } else if (algo === 'LRU') {
+          victim = q.shift(); // Remove page from the front (least recently used)
+        } else if (algo === 'Optimal') {
+          // Find the page in frames that will be used furthest in the future
+          let future = ref.slice(i + 1);
+          let victimIndexInQ = -1;
+          let maxFutureDistance = -1;
+
+          for (let j = 0; j < q.length; j++) {
+            let pageInFrame = q[j];
+            let nextUse = future.indexOf(pageInFrame);
+
+            if (nextUse === -1) { // Page not used again in the future
+              victimIndexInQ = j;
+              break; // This is the best victim
+            } else {
+              if (nextUse > maxFutureDistance) {
+                maxFutureDistance = nextUse;
+                victimIndexInQ = j;
+              }
+            }
+          }
+          // Remove the victim using its calculated index in q
+          victim = q.splice(victimIndexInQ, 1)[0];
+        }
+        set.delete(victim); // Remove victim from the set
+        set.add(x);         // Add the new page to the set
+        q.push(x);         // Add the new page to the end of the queue
+        stepDetails += `Replace ${victim} with ${x}`;
+      }
     }
-    out.push(step);
+    stepDetails += ` | Final Frames: [${q.join(',')}]`;
+    out.push(stepDetails);
   });
-  document.getElementById('page-output').textContent = `Page Faults: ${faults}\nPage Hits: ${hits}\n`+out.join('\n');
+
+  document.getElementById('page-output').textContent = `Algorithm: ${algo}\nFrame Capacity: ${cap}\n\nPage Faults: ${faults}\nPage Hits: ${hits}\nHit Rate: ${ref.length > 0 ? ((hits / ref.length) * 100).toFixed(2) : 'N/A'}%\nFault Rate: ${ref.length > 0 ? ((faults / ref.length) * 100).toFixed(2) : 'N/A'}%\n\nDetails:\n` + out.join('\n');
 }
+// --- End of corrected runPage function ---
+
 </script>
 </body>
 </html>
